--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,11 @@ body {
     padding: 0 17px;
     background-color: white;
 }
+#footer {
+    height: 50px;
+    border-top: gray;
+    background-color: indianred;
+}
 h2 {
     border-bottom: 1px solid #a0b0a0; 
 }
